test/cbmc/negative_tests/conversion_check/conversion_check_harness.c
../../aws-templates-for-cbmc-proofs/template-for-repository/negative_tests/conversion_check/conversion_check_harness.c